fix: Testes unitarios concluidos