@@ -16,18 +16,19 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.RestTemplate;
 
+import java.lang.reflect.Field;
 import java.util.Collections;
-import java.util.Enumeration;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.*;
 import static org.springframework.http.HttpMethod.GET;
-import static org.springframework.web.bind.annotation.RequestMethod.PUT;
 
 @SpringBootTest
 @AutoConfigureMockMvc
@@ -43,6 +44,8 @@ class UsuarioServiceTest {
     private HttpHeaderUtil httpHeaderUtil;
 
     @Mock
+    private RestTemplate restTemplate;
+
     private HttpHeaders headers;
 
     @BeforeEach
@@ -52,88 +55,151 @@ class UsuarioServiceTest {
 
     @Test
     @DisplayName("Deve criar usuário com sucesso")
-    void criarUsuarioComSucesso() {
-        UsuarioDto dto = mock(UsuarioDto.class);
-        RestTemplate restTemplateMock = Mockito.mock(RestTemplate.class);
-        String url = "http://localhost:8080/users/create";
-        HttpHeaders headers = Mockito.mock(HttpHeaders.class);
-        Enumeration<String> headerNames = Collections.enumeration(List.of("Authorization", "header2"));
-
-        HttpEntity<UsuarioDto> entity = Mockito.mock(HttpEntity.class);
-
-        when(request.getHeaderNames()).thenReturn(headerNames);
-        when(request.getHeader("Authorization")).thenReturn("token");
+    void criarUsuarioComSucesso() throws NoSuchFieldException, IllegalAccessException {
+        when(request.getHeaderNames()).thenReturn(Collections.enumeration(Collections.singletonList("Authorization")));
+        when(request.getHeader("Authorization")).thenReturn("Bearer token");
         when(httpHeaderUtil.copyHeaders(request)).thenReturn(headers);
-        when(restTemplateMock.exchange(url, PUT.asHttpMethod(), entity, Object.class)).thenReturn(ResponseEntity.ok(dto));
 
-        ResponseEntity<Object> response = service.criarUsuario(dto, request);
+        UsuarioRetornoDto mockResponse = Mockito.mock(UsuarioRetornoDto.class);
+        HttpEntity<UsuarioDto> entity = new HttpEntity<>(Mockito.mock(UsuarioDto.class), headers);
 
-        assertEquals(HttpStatus.CREATED, response.getStatusCode());
+        when(restTemplate.exchange("http://localhost:8080/users/create", HttpMethod.PUT, entity, Object.class)).thenReturn(new ResponseEntity<>(mockResponse, HttpStatus.OK));
+
+        Field field = UsuarioService.class.getDeclaredField("restTemplate");
+        field.setAccessible(true);
+        field.set(service, restTemplate);
+
+        service.criarUsuario(Mockito.mock(UsuarioDto.class), request);
+    }
+
+    @Test
+    @DisplayName("Deve retornar erro ao criar usuário")
+    void criarUsuarioErro() throws NoSuchFieldException, IllegalAccessException {
+        String url = "http://localhost:8080/users/create";
+        UsuarioDto usuarioDto = mock(UsuarioDto.class);
+
+        when(request.getHeaderNames()).thenReturn(Collections.enumeration(Collections.singletonList("Authorization")));
+        when(request.getHeader("Authorization")).thenReturn("Bearer token");
+        when(httpHeaderUtil.copyHeaders(request)).thenReturn(headers);
+
+        when(restTemplate.exchange(eq(url), eq(HttpMethod.PUT), any(HttpEntity.class), eq(Object.class)))
+                .thenThrow(new RuntimeException("Erro ao criar usuário"));
+
+        Field field = UsuarioService.class.getDeclaredField("restTemplate");
+        field.setAccessible(true);
+        field.set(service, restTemplate);
+
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> service.criarUsuario(usuarioDto, request));
+        assertEquals("Erro ao criar usuário", exception.getMessage());
+    }
+
+    @Test
+    @DisplayName("Deve listar usuários com sucesso")
+    void listarUsuariosComSucesso() throws NoSuchFieldException, IllegalAccessException {
+        when(request.getHeaderNames()).thenReturn(Collections.enumeration(Collections.singletonList("Authorization")));
+        when(request.getHeader("Authorization")).thenReturn("Bearer token");
+        when(httpHeaderUtil.copyHeaders(request)).thenReturn(headers);
+
+        List<UsuarioRetornoDto> usuarios = List.of(mock(UsuarioRetornoDto.class));
+        HttpEntity<UsuarioDto> entity = new HttpEntity<>(headers);
+
+        when(restTemplate.exchange("http://localhost:8080/users/list", GET, entity, ParameterizedTypeReference.class)).thenReturn(new ResponseEntity<>(HttpStatus.OK));
+
+        Field field = UsuarioService.class.getDeclaredField("restTemplate");
+        field.setAccessible(true);
+        field.set(service, restTemplate);
+
+        service.listarUsuarios(request);
+    }
+
+    @Test
+    @DisplayName("Deve retornar erro ao usar token inválido")
+    void tokenInvalido() throws NoSuchFieldException, IllegalAccessException {
+        String url = "http://localhost:8080/users/list";
+
+        when(request.getHeaderNames()).thenReturn(Collections.enumeration(Collections.singletonList("Authorization")));
+        when(request.getHeader("Authorization")).thenReturn("Bearer token-invalido");
+        when(httpHeaderUtil.copyHeaders(request)).thenReturn(headers);
+
+        when(restTemplate.exchange(eq(url), eq(GET), any(HttpEntity.class), any(ParameterizedTypeReference.class)))
+                .thenThrow(new RuntimeException("Token inválido"));
+
+        Field field = UsuarioService.class.getDeclaredField("restTemplate");
+        field.setAccessible(true);
+        field.set(service, restTemplate);
+
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> service.listarUsuarios(request));
+        assertEquals("Token inválido", exception.getMessage());
+    }
+
+    @Test
+    @DisplayName("Deve listar usuário por ID com sucesso")
+    void listarUsuarioPorIdComSucesso() throws NoSuchFieldException, IllegalAccessException {
+        int id = 1;
+        String url = "http://localhost:8080/users/getById/" + id;
+        UsuarioRetornoDto usuario = mock(UsuarioRetornoDto.class);
+        ResponseEntity<UsuarioRetornoDto> expectedResponse = new ResponseEntity<>(usuario, HttpStatus.OK);
+
+        when(request.getHeaderNames()).thenReturn(Collections.enumeration(Collections.singletonList("Authorization")));
+        when(request.getHeader("Authorization")).thenReturn("Bearer token");
+        when(httpHeaderUtil.copyHeaders(request)).thenReturn(headers);
+
+        when(restTemplate.exchange(eq(url), eq(GET), any(HttpEntity.class), eq(UsuarioRetornoDto.class)))
+                .thenReturn(expectedResponse);
+
+        Field field = UsuarioService.class.getDeclaredField("restTemplate");
+        field.setAccessible(true);
+        field.set(service, restTemplate);
+
+        ResponseEntity<UsuarioRetornoDto> response = service.listarUsuarioPorId(id, request);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(usuario, response.getBody());
+    }
+
+    @Test
+    @DisplayName("Deve retornar erro ao listar usuário por ID inexistente")
+    void listarUsuarioPorIdInexistente() throws NoSuchFieldException, IllegalAccessException {
+        int id = 999; // ID inexistente
+        String url = "http://localhost:8080/users/getById/" + id;
+
+        when(request.getHeaderNames()).thenReturn(Collections.enumeration(Collections.singletonList("Authorization")));
+        when(request.getHeader("Authorization")).thenReturn("Bearer token");
+        when(httpHeaderUtil.copyHeaders(request)).thenReturn(headers);
+
+        when(restTemplate.exchange(eq(url), eq(GET), any(HttpEntity.class), eq(UsuarioRetornoDto.class)))
+                .thenThrow(new RuntimeException("Usuário não encontrado"));
+
+        Field field = UsuarioService.class.getDeclaredField("restTemplate");
+        field.setAccessible(true);
+        field.set(service, restTemplate);
+
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> service.listarUsuarioPorId(id, request));
+        assertEquals("Usuário não encontrado", exception.getMessage());
+    }
+
+    @Test
+    @DisplayName("Deve deletar usuário com sucesso")
+    void deletarUsuarioComSucesso() throws NoSuchFieldException, IllegalAccessException {
+        int id = 1;
+        String url = "http://localhost:8080/users/delete/" + id;
+        ResponseEntity<String> expectedResponse = new ResponseEntity<>("Usuário deletado com sucesso", HttpStatus.OK);
+
+        when(request.getHeaderNames()).thenReturn(Collections.enumeration(Collections.singletonList("Authorization")));
+        when(request.getHeader("Authorization")).thenReturn("Bearer token");
+        when(httpHeaderUtil.copyHeaders(request)).thenReturn(headers);
+
+        when(restTemplate.exchange(eq(url), eq(HttpMethod.DELETE), any(HttpEntity.class), eq(String.class)))
+                .thenReturn(expectedResponse);
+
+        Field field = UsuarioService.class.getDeclaredField("restTemplate");
+        field.setAccessible(true);
+        field.set(service, restTemplate);
+
+        ResponseEntity<String> response = service.deletarUsuario(id, request);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals("Usuário deletado com sucesso", response.getBody());
+        verify(restTemplate, times(1)).exchange(eq(url), eq(HttpMethod.DELETE), any(HttpEntity.class), eq(String.class));
     }
 }
-
-//    @Test
-//    @DisplayName("Deve listar usuários com sucesso")
-//    void listarUsuariosComSucesso() {
-//        String url = "http://localhost:8080/users/list";
-//        List<UsuarioRetornoDto> usuarios = List.of(mock(UsuarioRetornoDto.class));
-//        ResponseEntity<List<UsuarioRetornoDto>> expectedResponse = new ResponseEntity<>(usuarios, HttpStatus.OK);
-//
-//        when(restTemplate.exchange(eq(url), eq(GET), any(HttpEntity.class), any(ParameterizedTypeReference.class)))
-//                .thenReturn(expectedResponse);
-//
-//        ResponseEntity<List<UsuarioRetornoDto>> response = service.listarUsuarios(request);
-//
-//        assertEquals(HttpStatus.OK, response.getStatusCode());
-//        assertEquals(usuarios, response.getBody());
-//        verify(restTemplate, times(1)).exchange(eq(url), eq(GET), any(HttpEntity.class), any(ParameterizedTypeReference.class));
-//    }
-//
-//    @Test
-//    @DisplayName("Deve listar usuário por ID com sucesso")
-//    void listarUsuarioPorIdComSucesso() {
-//        int id = 1;
-//        String url = "http://localhost:8080/users/getById/" + id;
-//        UsuarioRetornoDto usuario = mock(UsuarioRetornoDto.class);
-//        ResponseEntity<UsuarioRetornoDto> expectedResponse = new ResponseEntity<>(usuario, HttpStatus.OK);
-//
-//        when(restTemplate.exchange(url, GET, new HttpEntity<>(headers), UsuarioRetornoDto.class))
-//                .thenReturn(expectedResponse);
-//
-//        ResponseEntity<UsuarioRetornoDto> response = service.listarUsuarioPorId(id, request);
-//
-//        assertEquals(HttpStatus.OK, response.getStatusCode());
-//        assertEquals(usuario, response.getBody());
-//        verify(restTemplate, times(1)).exchange(url, GET, new HttpEntity<>(headers), UsuarioRetornoDto.class);
-//    }
-//
-//    @Test
-//    @DisplayName("Deve deletar usuário com sucesso")
-//    void deletarUsuarioComSucesso() {
-//        int id = 1;
-//        String url = "http://localhost:8080/users/delete/" + id;
-//        ResponseEntity<String> expectedResponse = new ResponseEntity<>("Usuário deletado com sucesso", HttpStatus.OK);
-//
-//        when(restTemplate.exchange(url, DELETE, new HttpEntity<>(headers), String.class))
-//                .thenReturn(expectedResponse);
-//
-//        ResponseEntity<String> response = service.deletarUsuario(id, request);
-//
-//        assertEquals(HttpStatus.OK, response.getStatusCode());
-//        assertEquals("Usuário deletado com sucesso", response.getBody());
-//        verify(restTemplate, times(1)).exchange(url, DELETE, new HttpEntity<>(headers), String.class);
-//    }
-//
-//    @Test
-//    @DisplayName("Deve verificar se as validações foram chamadas")
-//    void verificarSeValidacoesForamChamadas() {
-//        UsuarioDto dto = mock(UsuarioDto.class);
-//        HttpHeaders headersMock = mock(HttpHeaders.class);
-//
-//        when(HttpHeaderUtil.copyHeaders(request)).thenReturn(headersMock);
-//
-//        service.criarUsuario(dto, request);
-//
-//        verify(HttpHeaderUtil, times(1)).copyHeaders(request);
-//    }
-//}
